fix: properly validate variables with default values in @Scheduled field
Signed-off-by: Fred Bricon <fbricon@gmail.com>